Fix: Proper alignment for side zone cards with CSS rotation

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -520,6 +520,11 @@ body {
 
 .zone-left .zone-cards {
     flex-direction: column;
+    align-items: flex-end;
+}
+
+.zone-left .zone-card {
+    transform: rotate(90deg);
 }
 
 .zone-right {
@@ -528,6 +533,11 @@ body {
 
 .zone-right .zone-cards {
     flex-direction: column;
+    align-items: flex-start;
+}
+
+.zone-right .zone-card {
+    transform: rotate(-90deg);
 }
 
 /* Poker Table */
